# mail-clerk

./: .gitignore  LICENSE  README.md  pyproject.toml
src/clerk/: cli.py  config.py  mcp_server.py  models.py  permissions.py  search.py  tokens.py
src/clerk/auth/: google.py  keychain.py  microsoft.py
src/clerk/commands/: auth_cmd.py  calendar.py  config_cmd.py  mail.py  mcp_cmd.py  token_cmd.py
src/clerk/providers/: base.py  factory.py  gmail.py  graph.py
tests/: conftest.py  test_attachments.py  test_calendar_when.py  test_commands.py  test_commands_calendar_write.py  test_commands_write.py  test_config.py  test_config_cmd.py  test_include_body_and_batch.py  test_keychain_wrapper.py  test_mcp_more_tools.py  test_mcp_server.py  test_permissions.py  test_providers_calendar_write.py  test_providers_gmail.py  test_providers_graph.py  test_providers_write.py  test_recurrence_and_all_day.py  test_search.py  test_tokens.py  test_tz_display.py
tests/integration/: test_e2e.py  test_e2e_attachments.py  test_e2e_calendar_write.py  test_e2e_write.py  test_mcp_stdio.py  test_safety_guard.py
