[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clerk"
version = "0.1.0"
description = "Unified mail + calendar CLI and MCP server for Microsoft and Google accounts"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "typer>=0.12",
    "mcp>=1.0",
    "msal>=1.28",
    "httpx>=0.27",
    "google-auth>=2.30",
    "google-auth-oauthlib>=1.2",
    "keyring>=25",
    "pydantic>=2.7",
    "bcrypt>=4.1",
    "platformdirs>=4.2",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.5",
]

[project.scripts]
clerk = "clerk.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/clerk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: hits real APIs, gated by CLERK_INTEGRATION=1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
